# ipw

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
ipw/: cli.py
tests/: test_password.py
