[tool.poetry]
name = "ipw"
version = "0.1.0"
description = "Interactive Password Wizard CLI"
authors = ["neatnettech <pp@neatnet.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/neatnettech/ipw"
keywords = ["password", "cli", "generator", "security"]

packages = [{ include = "ipw" }]

[tool.poetry.dependencies]
python = "^3.8"
questionary = "^2.0"
rich = "^13.0"
pyperclip = "^1.8"
zxcvbn = "^4.5.0"

[tool.poetry.scripts]
ipw = "ipw.cli:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "test_*.py"